--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <!-- Favicon -->
-    <link rel="icon" href="/images/favicon.ico" sizes="32x32" type="image/png">
+    <link rel="icon" href="images/favicon.ico" sizes="32x32" type="image/png">
 
     <style>
       .bd-placeholder-img {
@@ -73,13 +73,13 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body class="text-center">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <main class="form-signin w-100 m-auto">
         <form method="POST" action="/">
-            <img class="mb-4" src="/images/Untitled design.png" alt="" width="200" height="200">
+            <img class="mb-4" src="images/Untitled design.png" alt="" width="200" height="200">
             <h1 class="h3 mb-3 fw-normal">Signup to my Newsletter!</h1>
 
             <div class="form-floating">
